# classconf

./: .coveragerc  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yaml
src/: example.py
src/classconf/: __init__.py  decorator.py  exceptions.py  parser.py  types.py  utils.py
src/classconf/format/: __init__.py  toml_format.py
src/dataconf/: __init__.py  decorator.py  parser.py  registry.py  state.py  types.py
src/dataconf/format/: __init__.py  config_format.py  json_format.py  toml_format.py
tests/: helpers.py  smoke_test.py  test_decorator.py  test_parser.py
