[project]
name = "dataconf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Damian D'Souza", email = "dsouzadamian189@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rtoml>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.13.3",
    "ruff>=0.15.0",
]
