[project]
name = "classconf"
version = "0.2.0"
description = "Dataclass companion for config metadata and parsing, with a ConfigParser that generates and loads configs from files."
readme = "README.md"
authors = [
    { name = "Damian D'Souza", email = "dsouzadamian189@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rtoml>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.13.3",
    "ruff>=0.15.0",
]

[tool.coverage.run]
omit = [
    "tests/*",
    ]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    ]

